AC_PREREQ(2.50)
AC_INIT()

AM_INIT_AUTOMAKE(openobex, 1.3)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AC_INIT_OPENOBEX

AC_LANG_C

AC_PROG_CC
AC_PROG_CC_PIE
AC_PROG_INSTALL

m4_define([_LT_AC_TAGCONFIG], [])
m4_ifdef([AC_LIBTOOL_TAGS], [AC_LIBTOOL_TAGS([])])

AC_PROG_LIBTOOL

AC_PATH_GLIB
AC_PATH_IRDA
AC_PATH_NETBSDBT
AC_PATH_FREEBSDBT
AC_PATH_BLUEZ
AC_PATH_USB

AC_ARG_OPENOBEX

AC_OUTPUT(Makefile include/Makefile lib/Makefile glib/Makefile apps/Makefile ircp/Makefile doc/Makefile openobex.pc openobex-glib.pc)
