AC_INIT(src/obex_test.c)
AM_INIT_AUTOMAKE(obex_apps, 0.1)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

#AM_ACLOCAL_INCLUDE(macros)

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_HEADER_STDC
AC_ARG_PROGRAM

AM_PATH_GLIB(1.2.0)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

CFLAGS="$CFLAGS -Wall"
CPPFLAGS="$CPPFLAGS -Wall"

AC_CHECK_LIB(openobex, OBEX_SetUserData, ,[AC_MSG_ERROR(OBEX Library needed (0.9.1 or higher))], -lglib $LIBS)

AC_OUTPUT([
Makefile 
src/Makefile])
