dnl
dnl  $Id$
dnl
dnl Process this file with autoconf to produce a configure script.
dnl

AC_INIT(src/obex_test.c)

AM_INIT_AUTOMAKE(openobex-apps, 1.0.0-pre2)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AC_PREFIX_DEFAULT(/usr)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AM_PATH_GLIB(1.2.0)
AM_PATH_OPENOBEX(1.0.0)

AC_OUTPUT([Makefile src/Makefile])
